@@ -39,7 +39,7 @@ datastruct.nchan = size(datastruct.data, 1);
 datastruct.nsamples = size(datastruct.data, 2);
 datastruct.processing = {};
 
-fprintf (1, '  ... %d sec (%d min) of voltage data on %d channel(s).\n', ...
+fprintf (1, '  ... %d sec (%.1f min) of voltage data on %d channel(s).\n', ...
 	 round(datastruct.nsamples*datastruct.dt), ...
-	 round(datastruct.nsamples*datastruct.dt/60), ...
+	 (datastruct.nsamples*datastruct.dt/60), ...
 	 datastruct.nchan);
